# opentelemetry-proto-go

otlp/collector/logs/v1/: BUILD.bazel  logs_service.pb.gw.go
otlp/collector/metrics/v1/: BUILD.bazel  metrics_service.pb.gw.go
otlp/collector/trace/v1/: BUILD.bazel  trace_service.pb.gw.go
