load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "logs",
    srcs = [
        "logs_service.pb.go",
        "logs_service.pb.gw.go",
        "logs_service_grpc.pb.go",
    ],
    importpath = "go.opentelemetry.io/proto/otlp/collector/logs/v1",
    visibility = ["//visibility:public"],
    deps = [
        "//logs/v1:logs",
        "@grpc_ecosystem_grpc_gateway//runtime",
        "@grpc_ecosystem_grpc_gateway//utilities",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//grpclog",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)

alias(
    name = "go_default_library",
    actual = ":logs",
    visibility = ["//visibility:public"],
)
