load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "trace",
    srcs = [
        "trace_config.pb.go",
        "trace_service.pb.go",
        "trace_service.pb.gw.go",
        "trace_service_grpc.pb.go",
    ],
    importpath = "go.opentelemetry.io/proto/otlp/collector/trace/v1",
    visibility = ["//visibility:public"],
    deps = [
        "//trace/v1:trace",
        "@com_github_golang_protobuf//descriptor:go_default_library_gen",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@grpc_ecosystem_grpc_gateway//runtime",
        "@grpc_ecosystem_grpc_gateway//utilities",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//grpclog",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)

alias(
    name = "go_default_library",
    actual = ":trace",
    visibility = ["//visibility:public"],
)
